# edmicro-app

./: .env.example  .gitignore  DEMO.md  README.md  docker-compose.yml  justfile
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 055a7fc2306a_org_tables_branches_classes_users_.py  12080f8f1ba7_submissions_and_answer_correctness.py  8649dfa4ed68_activity_and_audit_logs.py  87d2d5a583d0_content_questions_and_versions.py  a1b2c3d4e5f6_ai_grading_queue_and_quota.py  b2c3d4e5f6a7_exam_meta_and_attempt_deadline.py  c3d4e5f6a7b8_notifications_sessions_attendance.py  ce04705e34e7_practice_assignment_attempt_answer.py  d4e5f6a7b8c9_courses_lessons_gamification.py  e422c968d257_initial_tenants_users_platform_users.py  e5f6a7b8c9d0_support_tickets.py  f6a7b8c9d0e1_rls_for_log_tables.py
backend/app/: config.py  db.py  main.py
backend/app/core/: activity_log.py  audit.py  authn.py  security.py  tenant.py
backend/app/modules/assignment/: router.py  service.py
backend/app/modules/authz/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/content/: router.py  (+2 more)
backend/tests/: conftest.py  test_activity_log.py  test_ai_grade_flow.py  test_ai_grader.py  test_auth_login.py  test_authn.py  test_content.py  test_content_api.py  test_course_game_flow.py  test_exam_flow.py  test_grading.py  test_health.py  test_m10_flow.py  test_m3_flow.py  test_notify_flow.py  test_org_branches_classes.py  test_org_import.py  test_org_users.py  test_parent_flow.py  test_report.py  test_rls_isolation.py  test_sched_flow.py  test_security.py
(+157 files in other folders)
